--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700;800;900&display=swap');
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
     margin: 0;
     box-sizing: border-box;
 }
 
 body {
-  background-color: black;
+    background-color: black;
 }
 
 @-webkit-keyframes rotate {
@@ -21,36 +23,52 @@ body {
     }
 }
 
+
 .App {
+
+    min-width: 50vw;
     display: flex;
-    flex-direction: column; /* Stack elements vertically */
+    justify-content: left;
+
+
+    /* Stack elements vertically */
     font-family: 'Poppins', sans-serif;
-    max-width: 75vw;
-height: 100vh;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -khtml-user-select: none; /* Konqueror HTML */
-    -moz-user-select: none; /* Old versions of Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera, and Firefox */
+
+    height: 100vh;
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Old versions of Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently supported by Chrome, Edge, Opera, and Firefox */
 }
 
 .configurator {
-    position: fixed;
-    top: 0;
-    right: 0;
-    max-width: 30vw; /* Occupy full width */
-    height: 100vh; /* Adjusted height */
+    position: sticky;
+    display: flex;
+    flex-direction: column;
+
+    /* Occupy full width */
+    height: 100vh;
+    /* Adjusted height */
     background-color: rgb(0, 0, 0);
-    padding: 16px;
-    gap: 32px;
-    overflow-y: scroll; /* Add scroll if necessary */
+    padding-left: 15px;
+    padding-right: 4em;
+    padding-top: 17px;
+    overflow-y: scroll;
+    /* Add scroll if necessary */
 }
 
 .configurator__section__title {
     font-weight: bold;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 17px;
     margin-top: 20px;
     color: white;
     padding: 16px;
@@ -64,10 +82,10 @@ height: 100vh;
 }
 
 .current-color {
-  padding-top: 15px;
-  font-weight: normal;
-  font-size: 16px;
-  color: yellow;
+    padding-top: 15px;
+    font-weight: normal;
+    font-size: 16px;
+    color: rgb(255, 242, 0);
 }
 
 .item {
@@ -89,23 +107,7 @@ height: 100vh;
     color: rgb(0, 110, 255);
 }
 
-.vehicle_title,
-.vehicle_section {
-    position: fixed;
-    left: 24px;
-    width: calc(100% - 48px); /* Adjusted width */
-    color: white; /* Adjust color */
-    padding: 16px;
-    gap: 32px;
-}
 
-.vehicle_title {
-    bottom: 65vh; /* Adjusted position */
-}
-
-.vehicle_section {
-    bottom: 55vh; /* Adjusted position */
-}
 
 .button {
     display: inline-block;
@@ -115,7 +117,8 @@ height: 100vh;
     will-change: box-shadow, transform;
     background: radial-gradient(100% 100% at 100% 0%, #89E5FF 0%, #001eff 100%);
     box-shadow: 0px 2px 4px rgb(45 35 66 / 40%), 0px 7px 13px -3px rgb(45 35 66 / 30%), inset 0px -3px 0px rgb(58 65 111 / 50%);
-    padding: 10px 32px; /* Adjusted padding */
+    padding: 10px 32px;
+    /* Adjusted padding */
     margin-top: 30px;
     border-radius: 6px;
     color: #ffffff;
@@ -123,7 +126,8 @@ height: 100vh;
     font-weight: bold;
     text-shadow: 0 1px 0 rgb(0 0 0 / 40%);
     transition: box-shadow 0.15s ease, transform 0.15s ease;
-    text-align: center; /* Center text */
+    text-align: center;
+    /* Center text */
 }
 
 .button:hover {
@@ -137,39 +141,42 @@ height: 100vh;
 }
 
 .conic {
-  position: relative;
-  width: 200px;
-  height: 200px;
-  flex-shrink: 0;
-  border-radius: 50%;
-  /* background: #000; */
-  background-image: url('https://static.wixstatic.com/media/4fb926_88ed54b0addf498f93167cf4e1966db8~mv2.png');
-  background-size: 230px;
-  background-repeat: no-repeat;
-  background-position: center;
-  margin: 50px;
+    position: relative;
+    width: 225px;
+    height: 225px;
+    flex-shrink: 0;
+    border-radius: 50%;
+    /* background: #000; */
+    background-image: url('https://static.wixstatic.com/media/4fb926_88ed54b0addf498f93167cf4e1966db8~mv2.png');
+    background-size: 235px;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 30px;
 
 }
-.conic::before, .conic::after {
-  content: "";
-  position: absolute;
-  left: -6px;
-  top: -6px;
-  width: calc(100% + 12px);
-  height: calc(100% + 12px);
-  background: #333;
-  border-radius: 50%;
-  background-repeat: no-repeat;
-  background-position: 0 0;
-  background-image: conic-gradient(transparent, #ff3c41, #ff8a25, #ffe04f, #4fff88, #56ffef, #37b4ff, #c05aff, transparent 20%, transparent 100%);
-  -webkit-animation: rotate 4s linear infinite;
-          animation: rotate 4s linear infinite;
-  z-index: -1;
-}
+
+.conic::before,
 .conic::after {
-  background: none;
-  background-image: conic-gradient(transparent, #ff3c41, #ff8a25, #ffe04f, #4fff88, #56ffef, #37b4ff, #c05aff, transparent 20%, transparent 100%);
-  filter: blur(10px);
+    content: "";
+    position: absolute;
+    left: -6px;
+    top: -6px;
+    width: calc(100% + 12px);
+    height: calc(100% + 12px);
+    background: #333;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    background-image: conic-gradient(transparent, #ff3c41, #ff8a25, #ffe04f, #4fff88, #56ffef, #37b4ff, #c05aff, transparent 20%, transparent 100%);
+    -webkit-animation: rotate 4s linear infinite;
+    animation: rotate 4s linear infinite;
+    z-index: -1;
+}
+
+.conic::after {
+    background: none;
+    background-image: conic-gradient(transparent, #ff3c41, #ff8a25, #ffe04f, #4fff88, #56ffef, #37b4ff, #c05aff, transparent 20%, transparent 100%);
+    filter: blur(10px);
 }
 
 
@@ -201,9 +208,11 @@ height: 100vh;
     0% {
         background-position: 0 0;
     }
+
     50% {
         background-position: 400% 0;
     }
+
     100% {
         background-position: 0 0;
     }
@@ -213,10 +222,120 @@ height: 100vh;
     0% {
         background-position: 0 0;
     }
+
     50% {
         background-position: 400% 0;
     }
+
     100% {
         background-position: 0 0;
     }
+}
+
+.selector {
+    width: 300px;
+}
+
+.picker-color {
+    color: white;
+}
+
+.current-color {
+    display: flex;
+    justify-content: baseline;
+    flex-direction: column;
+    text-transform: uppercase;
+    align-items: center;
+    font-size: 20px;
+    margin-top: 25px;
+    border: #ffffff;
+    border-style: dashed;
+    border-radius: 20px;
+    padding-bottom: 10px;
+    color: rgb(255, 255, 255);
+
+}
+
+.color-hex {
+    font-size: 24px;
+    color: "white";
+
+
+}
+
+@media (max-width: 1000px) {
+    .conic {
+        position: relative;
+        width: 180px;
+        height: 180px;
+        flex-shrink: 0;
+        border-radius: 50%;
+        /* background: #000; */
+        background-image: url('https://static.wixstatic.com/media/4fb926_88ed54b0addf498f93167cf4e1966db8~mv2.png');
+        background-size: 200px;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin: 10px;
+        margin-left: 15px;
+    }
+
+    .configurator {
+        position: sticky;
+        min-width: 280px;
+        /* Occupy full width */
+        height: 100vh;
+        /* Adjusted height */
+        background-color: rgb(0, 0, 0);
+        padding-left: 25px;
+        padding-right: 1em;
+        padding-top: 17px;
+        overflow-y: scroll;
+        /* Add scroll if necessary */
+    }
+
+    .configurator__section__title {
+        font-weight: bold;
+        text-transform: uppercase;
+        font-size: 15px;
+        margin-top: 15px;
+        color: white;
+        padding: 10px;
+    }
+
+    .selector {
+        width: 220px;
+    }
+
+    .current-color {
+        font-size: 15px;
+    }
+
+    .color-hex {
+
+        margin-left: 55px;
+        font-size: 24px;
+        color: "white"
+    }
+
+    .button {
+        display: inline-block;
+        outline: 0;
+        border: 0;
+        cursor: pointer;
+        will-change: box-shadow, transform;
+        background: radial-gradient(100% 100% at 100% 0%, #89E5FF 0%, #001eff 100%);
+        box-shadow: 0px 2px 4px rgb(45 35 66 / 40%), 0px 7px 13px -3px rgb(45 35 66 / 30%), inset 0px -3px 0px rgb(58 65 111 / 50%);
+        padding: 10px 20px;
+        /* Adjusted padding */
+        margin-top: 20px;
+        border-radius: 6px;
+        color: #ffffff;
+        font-size: 16px;
+        font-weight: bold;
+        text-shadow: 0 1px 0 rgb(0 0 0 / 40%);
+        transition: box-shadow 0.15s ease, transform 0.15s ease;
+        text-align: center;
+        /* Center text */
+    }
+
 }
